manifests/monitoring/resources/dev/routes/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/target: "116.203.203.121"
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: http
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - grafana-dev.easysolution.work
  rules:
    - backendRefs:
        - name: monitoring-grafana
          port: 80
